@@ -16397,7 +16397,7 @@ Very High</property>
 	  <child>
 	    <widget class="GtkButton" id="gvclose">
 	      <property name="visible">True</property>
-	      <property name="tooltip" translatable="yes">Click to close</property>
+	      <property name="tooltip" translatable="yes">Click to delete gramplet from view</property>
 	      <property name="can_focus">True</property>
 	      <property name="relief">GTK_RELIEF_NORMAL</property>
 	      <property name="focus_on_click">True</property>
