@@ -1,3 +1,8 @@
+2008-02-24  Douglas S. Blank <dblank@cs.brynmawr.edu>
+	* src/DataViews/GrampletView.py: don't save deleted gramplets
+	* src/glade/gramps.glade: changed tooltip from "close" to "delete"
+	Gramplets are either undeleted before exit, or they go away
+
 2008-02-22  Raphael Ackermann <raphael.ackermann@gmail.com>
 	* various (294 files)
 	pep8 doc fixes & pylint fixes
